chore: test on the next branch and deploy from master

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -3,11 +3,11 @@ name: Dev builds
 on:
   push:
     branches:
-      - master
+      - next
 
   pull_request:
     branches:
-      - master
+      - next
 
 env:
   SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
