ci: go back to running only on master
Gonna try something else with releases

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -3,11 +3,11 @@ name: Dev builds
 on:
   push:
     branches:
-      - next
+      - master
 
   pull_request:
     branches:
-      - next
+      - master
 
 env:
   SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
