--- a/packages/navis_ui/pubspec.yaml
+++ b/packages/navis_ui/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
   sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
-  cached_network_image: ^3.1.0+1
+  cached_network_image: ^3.2.0
   flutter:
     sdk: flutter
   flutter_web_browser: ^0.16.0
