--- a/packages/market_repository/pubspec.yaml
+++ b/packages/market_repository/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  hive: ^2.0.5
+  hive: 2.0.5
   market_client:
     git:
       url: https://github.com/SlayerOrnstein/market_client.git
@@ -24,4 +24,4 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^2.3.0
+  very_good_analysis: 2.4.0
