--- a/packages/notification_repository/pubspec.yaml
+++ b/packages/notification_repository/pubspec.yaml
@@ -7,11 +7,11 @@ environment:
   sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
-  firebase_core: ^1.12.0
-  firebase_messaging: ^11.2.6
+  firebase_core: 1.12.0
+  firebase_messaging: 11.2.6
   flutter:
     sdk: flutter
-  intl: ^0.17.0
+  intl: 0.17.0
   wfcd_client:
     git:
       url: https://github.com/SlayerOrnstein/wfcd_client.git
@@ -20,4 +20,4 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^2.4.0
+  very_good_analysis: 2.4.0
