--- a/packages/worldstate_repository/pubspec.yaml
+++ b/packages/worldstate_repository/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  hive: ^2.0.5
+  hive: 2.0.5
   user_settings:
     path: ../user_settings
   wfcd_client:
@@ -20,5 +20,5 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mocktail: ^0.2.0
-  very_good_analysis: ^2.3.0
+  mocktail: 0.2.0
+  very_good_analysis: 2.3.0
