--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,38 +7,38 @@ environment:
   sdk: ">=2.15.0 <3.0.0"
 
 dependencies:
-  animations: ^2.0.2
-  bloc: ^8.0.2
-  cached_network_image: ^3.2.0
-  equatable: ^2.0.3
+  animations: 2.0.2
+  bloc: 8.0.2
+  cached_network_image: 3.2.0
+  equatable: 2.0.3
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.1
+  flutter_bloc: 8.0.1
   flutter_localizations:
     sdk: flutter
-  flutter_svg: ^1.0.3
-  flutter_web_browser: ^0.16.0
-  get_it: ^7.2.0
-  hive: ^2.0.5
-  hydrated_bloc: ^8.0.0
-  intl: ^0.17.0
+  flutter_svg: 1.0.3
+  flutter_web_browser: 0.16.0
+  get_it: 7.2.0
+  hive: 2.0.5
+  hydrated_bloc: 8.0.0
+  intl: 0.17.0
   market_client:
     git:
       url: https://github.com/SlayerOrnstein/market_client.git
       ref: v1.1.1
   market_repository:
     path: packages/market_repository
-  matomo: ^1.1.0
+  matomo: 1.1.0
   navis_ui:
     path: packages/navis_ui
-  nil: ^1.1.1
+  nil: 1.1.1
   notification_repository:
     path: packages/notification_repository
-  package_info: ^2.0.2
-  responsive_builder: ^0.4.1
-  sentry_flutter: ^6.2.2
-  shimmer: ^2.0.0
-  simple_icons: ^6.1.0
+  package_info: 2.0.2
+  responsive_builder: 0.4.1
+  sentry_flutter: 6.3.0
+  shimmer: 2.0.0
+  simple_icons: 6.1.0
   user_settings:
     path: packages/user_settings
   wfcd_client:
@@ -49,13 +49,13 @@ dependencies:
     path: packages/worldstate_repository
 
 dev_dependencies:
-  bloc_test: ^9.0.2
+  bloc_test: 9.0.2
   flutter_test:
     sdk: flutter
-  mocktail: ^0.2.0
-  sentry_dart_plugin: ^1.0.0-beta.1
-  test: ^1.17.12
-  very_good_analysis: ^2.4.0
+  mocktail: 0.2.0
+  sentry_dart_plugin: 1.0.0-beta.1
+  test: 1.19.5
+  very_good_analysis: 2.4.0
 
 flutter:
   generate: true
