--- a/packages/navis_ui/pubspec.yaml
+++ b/packages/navis_ui/pubspec.yaml
@@ -4,19 +4,19 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.15.0 <3.0.0"
 
 dependencies:
-  cached_network_image: ^3.2.0
+  cached_network_image: 3.2.0
   flutter:
     sdk: flutter
-  flutter_web_browser: ^0.16.0
-  html: ^0.15.0
+  flutter_web_browser: 0.16.0
+  html: 0.15.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^2.4.0
+  very_good_analysis: 2.4.0
 
 flutter:
   fonts:
