ci(deploy): setup cider to get version codes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,9 @@ jobs:
         with:
           channel: ${{ env.FLUTTER_VERSION }}
 
+      - name: Setup Cider
+        run: flutter pub global activate cider
+
       - name: Decode signing key and services json
         run: |
           base64 -d <<< $TENNO_STORE > android/keystore.jks
