--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,8 @@ android/app/.classpath
 **/ios/**/DerivedData/
 **/ios/**/Icon?
 **/ios/**/Pods/
+**/ios/Podfile
+**/ios/Podfile.lock
 **/ios/**/.symlinks/
 **/ios/**/profile
 **/ios/**/xcuserdata
