--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   animations: 2.0.2
-  bloc: 8.0.2
+  bloc: 8.0.3
   cached_network_image: 3.2.0
   equatable: 2.0.3
   flutter:
@@ -17,9 +17,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: 1.0.3
-  flutter_web_browser: 0.16.0
+  flutter_web_browser: 0.17.0
   get_it: 7.2.0
-  hive: 2.0.5
+  hive: 2.0.6
   hydrated_bloc: 8.0.0
   intl: 0.17.0
   market_client:
@@ -35,10 +35,10 @@ dependencies:
   notification_repository:
     path: packages/notification_repository
   package_info: 2.0.2
-  responsive_builder: 0.4.1
+  responsive_builder: 0.4.2
   sentry_flutter: 6.3.0
   shimmer: 2.0.0
-  simple_icons: 6.1.0
+  simple_icons: 6.11.0
   user_settings:
     path: packages/user_settings
   wfcd_client:
@@ -49,10 +49,10 @@ dependencies:
     path: packages/worldstate_repository
 
 dev_dependencies:
-  bloc_test: 9.0.2
+  bloc_test: 9.0.3
   flutter_test:
     sdk: flutter
-  mocktail: 0.2.0
+  mocktail: 0.3.0
   sentry_dart_plugin: 1.0.0-beta.1
   test: 1.19.5
   very_good_analysis: 2.4.0
@@ -80,6 +80,7 @@ flutter:
     - assets/Derelict.webp
     - assets/event_info.json
     - assets/wfcd_logo_color.svg
+    - assets/baro_banner.webp
 
 sentry:
   upload_native_symbols: true
