ci: correct working-directory

--- a/.github/workflows/user_settings.yml
+++ b/.github/workflows/user_settings.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     defaults:
       run:
-        working-directory: packages/market_repo
+        working-directory: packages/user_settings
 
     runs-on: ubuntu-latest
 
