--- a/.github/workflows/worldstate_repo.yml
+++ b/.github/workflows/worldstate_repo.yml
@@ -17,10 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install Dart
-        uses: dart-lang/setup-dart@v1
+      - name: Installing Flutter SDK
+        uses: subosito/flutter-action@v1
         with:
-          sdk: 2.15.0
+          channel: stable
 
       - name: Install Dependencies
         run: pub get
