--- a/.github/workflows/worldstate_repo.yml
+++ b/.github/workflows/worldstate_repo.yml
@@ -26,13 +26,13 @@ jobs:
         run: pub get
 
       - name: Format
-        run: dartfmt --dry-run --set-exit-if-changed lib test
+        run: flutter format --dry-run --set-exit-if-changed lib test
 
       - name: Analyze
-        run: dart analyze --fatal-infos --fatal-warnings .
+        run: flutter analyze --fatal-infos --fatal-warnings .
 
       - name: Run tests
-        run: dart test --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+        run: flutter test --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
 
       - name: Check Code Coverage
         uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
