--- a/.github/workflows/user_settings.yml
+++ b/.github/workflows/user_settings.yml
@@ -14,29 +14,6 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Installing Flutter SDK
-        uses: subosito/flutter-action@v1
-        with:
-          channel: stable
-
-      - name: Install Dependencies
-        run: pub get
-
-      - name: Format
-        run: flutter format --dry-run --set-exit-if-changed lib test
-
-      - name: Analyze
-        run: flutter analyze --fatal-infos --fatal-warnings .
-
-      - name: Run tests
-        run: flutter test --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
-
-      - name: Check Code Coverage
-        uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
-        with:
-          path: packages/user_settings/coverage/lcov.info
-          min_coverage: 90
-          exclude: "**/*.g.dart **/*.gen.dart"
+    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
+    with:
+      min_coverage: 90
