--- a/.github/workflows/user_settings.yml
+++ b/.github/workflows/user_settings.yml
@@ -10,4 +10,5 @@ jobs:
   build:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
+      working_directory: packages/user_settings
       min_coverage: 90
