--- a/packages/navis_ui/pubspec.yaml
+++ b/packages/navis_ui/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=2.15.0 <3.0.0"
 
 dependencies:
+  black_hole_flutter: ^0.3.5
   cached_network_image: 3.2.0
   flutter:
     sdk: flutter
