--- a/.github/workflows/worldstate_repo.yml
+++ b/.github/workflows/worldstate_repo.yml
@@ -7,8 +7,11 @@ on:
       - ".github/workflows/worldstate_repo.yaml"
 
 jobs:
-  build:
-    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
-    with:
-      working_directory: packages/worldstate_repository
-      min_coverage: 90
+  test:
+    steps:
+      - name: Fetch an updated worldstate
+        run: curl https://api.warframestat.us/pc > test/fixtures/worldstate.json
+      - uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
+        with:
+          working_directory: packages/worldstate_repository
+          min_coverage: 90
