--- a/.github/workflows/worldstate_repo.yml
+++ b/.github/workflows/worldstate_repo.yml
@@ -10,7 +10,8 @@ jobs:
   setup:
     runs-on: ubuntu-latest
     defaults:
-      working-directory: packages/worldstate_repository
+      run:
+        working-directory: packages/worldstate_repository
     steps:
       - name: Fetch an updated worldstate
         run: curl https://api.warframestat.us/pc >> test/fixtures/worldstate.json
