--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -105,10 +105,7 @@ jobs:
         run: base64 -d <<< $FIREBASE_IOS > ios/Runner/GoogleService-Info.plist
 
       - name: Build ios using flutter
-        run: |
-        flutter build ios \
-        --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL \
-        -t lib/main_production.dart --no-codesign
+        run: flutter build ios --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL -t lib/main_production.dart --no-codesign
 
       - uses: actions/setup-ruby@v1
         with:
