--- a/.github/workflows/user_settings.yml
+++ b/.github/workflows/user_settings.yml
@@ -4,39 +4,11 @@ on:
   pull_request:
     paths:
       - "packages/user_settings/**"
-      - ".github/workflows/market_repo.yaml"
+      - ".github/workflows/user_settings.yaml"
 
 jobs:
   build:
-    defaults:
-      run:
-        working-directory: packages/market_repo
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Install Dart
-        uses: dart-lang/setup-dart@v1
-        with:
-          sdk: 2.15.0
-
-      - name: Install Dependencies
-        run: pub get
-
-      - name: Format
-        run: dartfmt --dry-run --set-exit-if-changed lib test
-
-      - name: Analyze
-        run: dart analyze --fatal-infos --fatal-warnings .
-
-      - name: Run tests
-        run: dart test --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
-
-      - name: Check Code Coverage
-        uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
-        with:
-          path: packages/user_settings/coverage/lcov.info
-          min_coverage: 90
-          exclude: "**/*.g.dart **/*.gen.dart"
+    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
+    with:
+      working_directory: packages/user_settings
+      min_coverage: 5
