--- a/packages/worldstate_repository/pubspec.yaml
+++ b/packages/worldstate_repository/pubspec.yaml
@@ -7,18 +7,19 @@ environment:
   sdk: ">=2.13.0 <3.0.0"
 
 dependencies:
+  equatable: ^2.0.3
   flutter:
     sdk: flutter
-  hive: 2.0.5
+  hive: 2.0.6
   user_settings:
     path: ../user_settings
   wfcd_client:
     git:
       url: https://github.com/SlayerOrnstein/wfcd_client.git
-      ref: v3.7.2
+      ref: v3.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  mocktail: 0.2.0
+  mocktail: 0.3.0
   very_good_analysis: 2.4.0
