--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,8 @@ environment:
 
 dependencies:
   animations: 2.0.2
-  bloc: 8.0.2
+  black_hole_flutter: 0.3.5
+  bloc: 8.0.3
   cached_network_image: 3.2.0
   equatable: 2.0.3
   flutter:
@@ -17,10 +18,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: 1.0.3
-  flutter_web_browser: 0.16.0
-  get_it: 7.2.0
-  hive: 2.0.5
-  hydrated_bloc: 8.0.0
+  flutter_web_browser: 0.17.0
+  hive: 2.0.6
+  hydrated_bloc: 8.1.0
   intl: 0.17.0
   market_client:
     git:
@@ -35,24 +35,24 @@ dependencies:
   notification_repository:
     path: packages/notification_repository
   package_info: 2.0.2
-  responsive_builder: 0.4.1
-  sentry_flutter: 6.3.0
+  responsive_builder: 0.4.2
+  sentry_flutter: 6.4.0
   shimmer: 2.0.0
-  simple_icons: 6.1.0
+  simple_icons: 6.13.0
   user_settings:
     path: packages/user_settings
   wfcd_client:
     git:
       url: https://github.com/SlayerOrnstein/wfcd_client.git
-      ref: v3.7.2
+      ref: v3.8.0
   worldstate_repository:
     path: packages/worldstate_repository
 
 dev_dependencies:
-  bloc_test: 9.0.2
+  bloc_test: 9.0.3
   flutter_test:
     sdk: flutter
-  mocktail: 0.2.0
+  mocktail: 0.3.0
   sentry_dart_plugin: 1.0.0-beta.1
   test: 1.19.5
   very_good_analysis: 2.4.0
@@ -77,10 +77,10 @@ flutter:
       fonts:
         - asset: assets/icons/SyndicateGlyphs.ttf
   assets:
-    - assets/Derelict.webp
-    - assets/event_info.json
-    - assets/wfcd_logo_color.svg
-    # - assets/mod_frames/
+    - assets/bundled/Derelict.webp
+    # - assets/event_info.json
+    - assets/bundled/wfcd_logo_color.svg
+    - assets/bundled/baro_banner.webp
 
 sentry:
   upload_native_symbols: true
