--- a/android/.gitignore
+++ b/android/.gitignore
@@ -5,5 +5,12 @@ gradle-wrapper.jar
 /gradlew.bat
 /local.properties
 GeneratedPluginRegistrant.java
+
+# Remember to never publicly share your keystore.
+# See https://flutter.dev/docs/deployment/android#reference-the-keystore-from-the-app
+key.properties
+**/*.keystore
+**/*.jks
+
 /fastlane/metadata/*
 /fastlane/report.xml
