--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: Cephalon Navis is an Android app inspired by Warframe Hub.
 publish_to: none
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   animations: 2.0.2
@@ -50,11 +50,12 @@ dependencies:
 
 dev_dependencies:
   bloc_test: 9.0.3
+  dart_code_metrics: ^4.15.0
   flutter_test:
     sdk: flutter
   mocktail: 0.3.0
   sentry_dart_plugin: 1.0.0-beta.2
-  test: 1.19.5
+  test: 1.21.1
   very_good_analysis: 2.4.0
 
 flutter:
