--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -23,13 +23,13 @@ jobs:
       TENNO_STORE: ${{ secrets.TENNO_STORE }}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - uses: actions/setup-java@v1
         with:
           java-version: "12.x"
 
-      - uses: subosito/flutter-action@v1
+      - uses: subosito/flutter-action@v2
         with:
           channel: stable
 
@@ -49,18 +49,16 @@ jobs:
   ios:
     runs-on: macos-latest
 
-    strategy:
-      fail-fast: true
-
     env:
       FIREBASE_IOS: ${{ secrets.FIREBASE_IOS }}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: subosito/flutter-action@v1
+      - uses: subosito/flutter-action@v2
         with:
           channel: stable
+          architecture: arm64
 
       - name: Decode service plist
         run: base64 -d <<< $FIREBASE_IOS > ios/Runner/GoogleService-Info.plist
