--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,4 +4,8 @@ updates:
   - package-ecosystem: "pub"
     directory: "/"
     schedule:
+      interval: "daily"
+  - package-ecosystem: github-actions
+    directory: "/"
+    schedule:
       interval: "weekly"
