--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -27,6 +27,7 @@ jobs:
 
       - uses: actions/setup-java@v3
         with:
+          distribution: temurin
           java-version: "12.x"
 
       - uses: subosito/flutter-action@v2
