--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
 
       - uses: actions/setup-java@v3
         with:
+          distribution: temurin
           java-version: "12.x"
 
       - uses: subosito/flutter-action@v1
@@ -105,7 +106,7 @@ jobs:
         run: base64 -d <<< $FIREBASE_IOS > ios/Runner/GoogleService-Info.plist
 
       - name: Build ios using flutter
-        run: | 
+        run: |
           flutter build ios \
           --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL \
           -t lib/main_prod.dart --no-codesign
