--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -35,9 +35,7 @@ jobs:
           channel: stable
 
       - name: Decode signing key and services json
-        run: |
-          base64 -d <<< $TENNO_STORE > android/keystore.jks
-          echo $TENNO_FIREBASE > android/app/google-services.json
+        run: base64 -d <<< $TENNO_STORE > android/keystore.jks
 
       - name: Build apks
         run: flutter build apk --dart-define=SENTRY_DSN=$SENTRY_DSN --dart-define=MATOMO_URL=$MATOMO_URL --flavor dev -t lib/main_dev.dart --split-per-abi
@@ -60,9 +58,6 @@ jobs:
         with:
           channel: stable
           architecture: x64
-
-      - name: Decode service plist
-        run: echo $FIREBASE_IOS > ios/Runner/GoogleService-Info.plist
 
       - name: Pod update
         run: pod repo update
