--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -12,65 +12,90 @@ on:
 jobs:
   android:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-java@v3
+      - name: Install Java JDK
+        uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: "11"
 
-      - uses: subosito/flutter-action@v2
+      - name: Install Flutter SDK
+        uses: subosito/flutter-action@v2
         with:
           channel: stable
 
-      - name: Retrieve signing key
-        env:
-          KEYSTORE: ${{ secrets.KEYSTORE }}
-        run: echo $KEYSTORE | base64 --decode > android/keystore.jks
+      - name: Install keystore and Firebase keys
+        run: |
+          echo $KEYSTORE | base64 --decode > android/keystore.jks
+          echo $FIREBASE_OPTIONS | base64 --decode > lib/firebase_options.dart
 
-      - name: Retrieve Firebase options
-        env:
-          FIREBASE_OPTIONS: ${{ secrets.FIREBASE_OPTIONS }}
-        run: echo $FIREBASE_OPTIONS | base64 --decode > lib/firebase_options.dart
-
-      - name: Build apks
+      - name: Build app
         env:
           KEYSTOREPASS: ${{ secrets.KEYSTOREPASS }}
         run: flutter build apk --flavor dev -t lib/main_dev.dart --split-per-abi
 
-      - uses: actions/upload-artifact@v3
+      - name: Uploade artifacts
+        uses: actions/upload-artifact@v3
         with:
           name: android-test-artifacts
           path: "build/app/outputs/flutter-apk/app-*-dev-release.apk"
 
   ios:
     runs-on: macos-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - uses: subosito/flutter-action@v2
+      - name: Install Apple certificate and provisioning profile
+        env:
+          APPSTORE_CERT: ${{ secrets.APPSTORE_CERT }}
+          APPSTORE_CERT_PASSWORD: ${{ secrets.APPSTORE_CERT_PASSWORD }}
+          MOBILEPROVISION: ${{ secrets.MOBILEPROVISION }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYSTOREPASS }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+
+          # import certificate and provisioning profile from secrets
+          echo -n "$APPSTORE_CERT" | base64 --decode --output $CERTIFICATE_PATH
+          echp -n "$MOBILEPROVISION" | base64 --decode --output $PP_PATH
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+
+      - name: Install Flutter SDK
+        uses: subosito/flutter-action@v2
         with:
           channel: stable
           architecture: x64
 
-      - name: Decode signing key and services json
-        env:
-          FIREBASE_IOS: ${{ secrets.FIREBASE_IOS }}
-          FIREBASE_OPTIONS: ${{ secrets.FIREBASE_OPTIONS }}
-        run: |
-          echo $FIREBASE_IOS | base64 --decode > ios/firebase_app_id_file.json
-          echo $FIREBASE_OPTIONS | base64 --decode > lib/firebase_options.dart
+      - name: Build app
+        run: flutter build ipa -t lib/main_dev.dart --export-option-plist=ios/ExportOptions.plist
 
-      - name: Pod update
-        run: pod repo update
-
-      - name: Build ios using flutter
-        run: flutter build ios -t lib/main_dev.dart --no-codesign
-
-      - uses: actions/upload-artifact@v3
+      - name: Uploade artifacts
+        uses: actions/upload-artifact@v3
         with:
-          name: ios-test-artifacts
-          path: "build/ios/iphoneos/Runner.app"
+          name: ios-test-artifact
+          path: "build/ios/ipa/*.ipa"
+
+      # Only needed for self-hosted runners but I'm a paraniod person.
+      - name: Clean up keychain and provisioning profile
+        if: ${{ always() }}
+        run: |
+          security delete-keychain $RUNNER_TEMP/app-signing.keychain-db
+          rm ~/Library/MobileDevice/Provisioning\ Profiles/build_pp.mobileprovision
