--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -54,7 +54,7 @@ jobs:
           APPSTORE_CERT: ${{ secrets.APPSTORE_CERT }}
           APPSTORE_CERT_PASSWORD: ${{ secrets.APPSTORE_CERT_PASSWORD }}
           MOBILEPROVISION: ${{ secrets.MOBILEPROVISION }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYSTOREPASS }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
           # create variables
           CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
@@ -63,7 +63,7 @@ jobs:
 
           # import certificate and provisioning profile from secrets
           echo -n "$APPSTORE_CERT" | base64 --decode --output $CERTIFICATE_PATH
-          echp -n "$MOBILEPROVISION" | base64 --decode --output $PP_PATH
+          echo -n "$MOBILEPROVISION" | base64 --decode --output $PP_PATH
 
           # create temporary keychain
           security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
